# game_hacking

./: README.md
Batman Arcade/: readme.md
Castlevania Lords of Shadow 1 2/: BFPKTool.py
Castlevania Mirror of Fate/: packtool.py
Clocktower/: adodis.py  adostat.py  adt_mod.py  clocktower_research.txt  ct.py  ct_dis.py  ct_files.py  ct_txt.txt  ct_txt_proc.txt  cttd.py  ctti.py  cttt.py  first fear script.rtf  k.py  translate_ct.py  tst.py
Come on Baby/: README.md  cob_patch.c
Come on Baby/cob_patch_4/: CMakeLists.txt  EXPotatoIO.cpp  EXPotatoIO.h  KeyboardIO.cpp  KeyboardIO.h  LPTDevice.hpp  cob_emu.cpp  dbg_utils.cpp  dbg_utils.h
Come on Baby/cob_patch_4/IOPortEmu/: Base.cpp  Base.h  IOPortHandler.cpp  IOPortHandler.h  Linux.cpp  Linux.h  Win32.cpp  Win32.h
Culdcept/: 2png.py  2png_brute.py  SLUS_207.74  ablack.py  adxren.py  afscracker.py  ani format.txt  card_decrypt.py  card_ext.py  ccrk.py  cleaner.py  culd notes.txt  culd_card (2).py  culd_card.py  culdcept_cracker.py  culdcept_saga_card_spreadsheet.xls  culddat.py  culddat_cracker.py  culdroot.py  cvrt.py  ff.py  fuck.py  gen_spr.py  genpal.py  hatred.py  lha.py  mapdump.py  mapgen.py  mapgen_alt.py  modlren.py  nnfinder.py  notes.txt  null_deleter.py  out.pvr  palcvrt.py  scenmove.py  sprcvrt.py  test24216.py  undat.py
DJMax Technika/: tio_test.py
Darkstone/: mtfextract.py
Dead Heat and Dead Heat Riders/: README  arping.sh  check_ip.sh  config.csv.xlsx  dh_emu.c  dhr_emu.c  fffifconfig.pl  fixnet.sh  ifconfig.pl  nsPdrv.c  pinger.pl  pings.sh
I Wanna Be the Boshy/: boshy_editor.py
JVS/: JVSEmu.cpp  JVSEmu_alt.cpp  LibJVS.java  README.md
Percussion Master/: README.md  a27_emulator.py  peng_hacked  pio_emu.c  pm_emu.c  pm_emu_2.c  pm_regions.txt
Percussion Master/pm_emu_3/: CMakeLists.txt  library.c  patches.c  patches.h
Percussion Master/pm_emu_3/card/: card_emu.c  card_emu.h
Puyo Quest/: db_extract.py  db_repack.py
Star Trek Voyager/: README.md  kill_sound.sh  start_game.sh  start_setup.sh  start_sound.sh  stv_emu.c  stv_setup.c
TankTankTank/: README  tank_emu.c  tank_emu0314.c  tank_emu_2.c  tio_emu.c
Target Terror/: README.txt  flist.py  libpulse.so.0  target_terror_io.py
Target Terror/game_patch/: CMakeLists.txt  Design.txt  gfx.c  gfx.h  global.c  global.h  io.c  io.h  main.c  rtfs.c  rtfs.h  rtfs_util.c  rtfs_util.h  target.c  target.h
Team Frontline GunIO/: CMakeLists.txt  GunIOBoard.cpp  GunIOBoard.h  GunIOInput.cpp  (+3 more)
Technomotion/: CMakeLists.txt  CMakeLists.txt.old  fs.codepage.fix.c  fs.codepage.fix.h  fs.redirect.c  gfx.c  gfx.h  global.c  io.cmos.c  io.cmos.h  io.technoinput.c  io.technoinput.h  io.technoio.c  io.technoio.h  io.technooutput.c  io.technooutput.h  key_bindings.h  library.c  mem_utils.c  mem_utils.h  patches.c  patches.h  technoio_old.c  technoloader.c  technomotion_io.c  technomotion_io.h  technotools.c
Technomotion/kitchen_sink/: kitchen_sink.h  ks.hotpatch.c  ks.memutils.c  ks.memutils.h  ks.processinject_win32.c  target.h
Technomotion/old_patch/: CMakeLists.txt  README.md  cmos_rtc.c  cmos_rtc.h  global.c  global.h  library.c  technomotion_io.c
Technomotion/utils/: debug.c  debug.h  patching.c  patching.h  process.c  process.h
(+156 files in other folders)
